--- a/index.html
+++ b/index.html
@@ -1,234 +1,54 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>About Me</title>
-  <link rel="stylesheet" link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <!-- Add icon library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
 <style>
-  /* Style all font awesome icons */
-    .fa {
-    padding: 10px;
-    font-size: 15px;
-    width: 40px;
-    height:35px;
-    text-align: center;
-    text-decoration: none;
-    display:inline-block;
-    }
+		body{
+			background-color:#445069;
+		}
+	
+        .container {
+            display: flex;
+            flex-direction: row;
+        }
 
-    /* Add a hover effect if you want */
-    .fa:hover {
-    opacity: 0.7;
-    }
+        .img {
+			float:left;
+            width: 350px;
+            height: 300px;
+            background: black;
+            color: white;
+            font-size: 36px;
+            text-align: center;
+            line-height: 300px;
+        }
 
-    /* Set a specific color for each brand */
+        .text {
+            width: 60%;
+            padding: 30px;
+			font-family: Century Gothic;
+          color: #F7E987;
+        }
+  	.link{
+  		color:#5B9A8B;
+  	}
+		
 
-    /* Facebook */
-    .fa-facebook {
-    background: #3B5998;
-    color: white;
-    }
-
-    /* Twitter */
-    .fa-twitter {
-    background: #55ACEE;
-    color: white;
-    }
-
-    .fa-instagram {
-      background:#125688;
-      color: white;
-      padding-bottom: 3px;
-    }
-    .banner {
-      width: 100%;
-      height: 50px;
-      background-color: #427D9D;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 10px;
-    }
-    h1{
-      margin: 0;
-      font-family: 'helvetica';
-    }
-
-    h2 {
-      margin: 0;
-      font-family: 'montserrat';
-    }
-    .myimg{
-      width: 300px;
-      height: 300px;
-      padding-top: 10px;
-      margin-top: 20px;
-    }
-    .my-line {
-      border-top: 5px solid #9EB8D9;
-      width: 100%;
-    }
-    .banner-2{
-      width: 100%;
-      height: 30px;
-      background-color: #427D9D;
-      color: #fff;
-      text-align: center;
-      padding: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 10px;
-    }
-    .navbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      background-color: #333;
-      color: white;
-    }
-
-    .logo {
-      font-size: 20px;
-      text-decoration: none;
-      color: #fff;
-    }
-
-    .nav-links {
-      list-style: none;
-      display: flex;
-      margin: 0;
-      padding: 0;
-    }
-
-    .nav-links li {
-      margin: 0 10px;
-    }
-
-    .nav-links a {
-      text-decoration: none;
-      color: #fff;
-      padding: 5px;
-    }
-
-    .nav-links a:hover {
-      color: #ddd;
-    }
-
-</style>
+    </style>
+	
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
-  <nav class="navbar">
-    <a href="#" class="logo">My Website</a>
-    <ul class="nav-links">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#portfolio" onclick="scrollToPortfolio()">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-  <section id="home">
-  <br>
-  <br>
-    <div class="banner">
-      <h1> About Me Page</h1>
+    <div class="container">
+		<img src="gandako.jpg" class="img" width="1/0" height="1/0">
+        <div class="text">
+		    <h1><p>HEADER</p></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet aliquam id diam. Eget magna fermentum iaculis eu non diam phasellus. Enim tortor at auctor urna. Leo integer malesuada nunc vel risus commodo viverra maecenas. Imperdiet dui accumsan sit amet nulla. Odio pellentesque diam volutpat commodo. Dignissim cras tincidunt lobortis feugiat. Nunc id cursus metus aliquam eleifend mi in. Id leo in vitae turpis massa sed elementum tempus. Nunc sed velit dignissim sodales ut eu sem integer vitae. Duis at tellus at urna condimentum. Quisque non tellus orci ac auctor augue mauris augue. Tempus imperdiet nulla malesuada pellentesque. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Et odio pellentesque diam volutpat.
+        </div>
     </div>
-
-    <main class="container">
-      <section class="row">
-        <div class="col-md-6 text-center">
-          <img src="pic.jpg" alt="photo ni Aila" class="myimg img-fluid rounded-circle mx-auto d-block">
-          <h2>Aila Marie Nieva</h2>
-          <!-- Add font awesome icons -->
-          <a href="https://www.facebook.com/aila.nieva.5/" class="fa fa-facebook"></a>
-          <a href="https://twitter.com/ay_luhhh" class="fa fa-twitter"></a>
-          <a href="https://www.instagram.com/ay.luhhh/" class="fa fa-instagram"></a>
-        </div>
-        <div class="col-md-6">
-          <h2>About Me</h2>
-          <div class="my-line"></div>
-          <p>I am a BSIT student of UC and I am ready to slay💅</p>
-          <p> Here are the courses that I took this term:</p>
-          <ul>
-            <li>CC5: Information Management</li>
-            <li>CIT1: Quantitative Analysis</li>
-            <li>CIT14: Introduction to Web Technologies</li>
-            <li>CIT2: Routing and Switching</li>
-            <li>CIT5: Accounting Essentials</li>
-            <li>CC22: Mobile Application Design and Development</li>
-          </ul>
-          <p>Likes: Listening to music, dancing, traveling, taking pictures, watching kdramas and variety shows</p>
-          <div class="my-line"></div>
-        </div>
-      </section>
-    </main>
-  </section>
-  <section id="portfolio">
-    <div class="banner">
-      <h1>Portfolio</h1>
-      </div>
-      <main class="container">
-      <section class="row">
-        <div class="col-md-12">
-          <div class="row">
-          <div class="banner-2">Midterm</div>
-              <div class="col-sm-3 mb-3 mb-sm-0">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Learning Contract</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="C:\Users\Aila Nieva\OneDrive - University of the Cordilleras\Desktop\cit14\folder final proj\NievaAilaMarie_LearningContract.html" class="btn btn-primary">Visit</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-3">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-3">
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-              </div>
-              <div class="col-sm-3">
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-              </div>
-          </div>
-        </main>
-        </div>
-      </section>
-    </section>
-  
-  <footer class="container">
-    <p class="text-center">Copyright &copy; 2023 Aila Marie Nieva</p>
-  </footer>
+  <div class="link">
+	<p><li> <a href="file:///D:/A-HTML.html">Link A</a></li> </p>
+			<p> <li><a href="file:///D:/B.html">Link B </a></li></p>
+			<p><li> <a href="https://drive.google.com/drive/folders/1jz23DCAtVhcbaFwpbO9Uchu3iKJO824s">Link External </a></li></p>
+	</div>
 </body>
-<script>
-  function scrollToPortfolio() {
-  document.getElementById("portfolio").scrollIntoView({ behavior: "smooth" });
-}
-</script>
 </html>
